objects/amazonconnect__AC_CtiScript__c.object
<CustomObject>
    <fields>
        <fullName>amazonconnect__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amazonconnect__CtiAdapter__c</fullName>
        <label>CTI Adapter</label>
        <referenceTo>amazonconnect__AC_CtiAdapter__c</referenceTo>
        <relationshipLabel>CTI Flows</relationshipLabel>
        <relationshipName>Scripts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>amazonconnect__DebuggerBreakpoint__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting controls browser console debug output.</description>
        <label>Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Event__c</fullName>
        <label>Event</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>amazonconnect__Source__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>amazonconnect__ACCtiScriptEvent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>amazonconnect__Script__c</fullName>
        <label>CTI Flow</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Source__c</fullName>
        <label>Source</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>amazonconnect__ACCtiScriptSource</valueSetName>
        </valueSet>
    </fields>
    <label>AC CTI Script</label>
    <listViews>
        <fullName>amazonconnect__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CTI Flow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AC CTI Scripts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>